Updated wrapper width to fix the problem of the images not aligning with above heading background.

--- a/src/scss/pages/_work.scss
+++ b/src/scss/pages/_work.scss
@@ -1,5 +1,5 @@
 .workContent {
-  max-width: 1400px;
+  max-width: 1368px;
 
   .wrapper {
     max-width: 100%;
